<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rl_main_context"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/homepage"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
        <!--android:textStyle="bold"-->
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fl_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mToolbar"
        android:background="@color/gray_F0F0F0"></FrameLayout>


    <LinearLayout
        android:id="@+id/ll_main_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/main_bottom"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <RadioGroup
            android:id="@+id/rg_radiogroup_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_homepage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/main_footer_homepage_ico"
                android:gravity="center"
                android:text="@string/homepage"
                android:textColor="@drawable/main_footer_text_color"/>

            <RadioButton
                android:id="@+id/rb_reportpage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/main_footer_reportpage_ico"
                android:gravity="center"
                android:text="@string/reportpage"
                android:textColor="@drawable/main_footer_text_color"/>

            <RadioButton
                android:id="@+id/rb_personalpage"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/main_footer_personal_ico"
                android:gravity="center"
                android:text="@string/personalpage"
                android:textColor="@drawable/main_footer_text_color"/>
        </RadioGroup>

        <!--<LinearLayout-->
        <!--android:id="@+id/ll_bottom_homepage"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_bottom_homepage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/ic_action_info"/>-->

        <!--<TextView-->
        <!--android:id="@+id/tv_bottom_homepage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/homepage"-->
        <!--android:textSize="12sp"/>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:id="@+id/ll_bottom_reportpage"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_bottom_reportpage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/ic_action_info"/>-->

        <!--<TextView-->
        <!--android:id="@+id/tv_bottom_reportpage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/reportpage"-->
        <!--android:textSize="12sp"/>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:id="@+id/ll_bottom_personalpage"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_bottom_personalpage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/ic_action_info"/>-->

        <!--<TextView-->
        <!--android:id="@+id/tv_bottom_personalpage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/personalpage"-->
        <!--android:textSize="12sp"/>-->
        <!--</LinearLayout>-->
    </LinearLayout>

</RelativeLayout>
